# ea-agent

./: .env.example  .gitignore  .inv  README.md  main.py  pyproject.toml
docs/: PROJECT_CONTEXT.md
src/ea_agent/: cli.py
src/ea_agent/application/: nodes.py  reasoning.py  state.py  workflow.py
src/ea_agent/config/: settings.py
src/ea_agent/domain/: models.py  ports.py
src/ea_agent/infrastructure/: bedrock_reasoner.py  enterprise_research_skill.py  fake_skills.py  mcp_client.py  prompt_loader.py  research_logger.py  skills.py
src/ea_agent/infrastructure/mcp/: base.py  errors.py  http_client.py  serialization.py  stdio_client.py
src/ea_agent/prompts/: architecture_reasoning.md  clarification.md  decision_router.md  section_generation.md  system.md
src/ea_agent/scripts/: discover_mcp_tools.py
